--- a/css/style.css
+++ b/css/style.css
@@ -2,38 +2,135 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: sans-serif;
+  color: grey;
 }
 
-/* .container {
-  height: 100%;
+a {
+  text-decoration: none;
+}
+
+
+.flex {
+  display: flex;
+  /* justify-content: center; */
+  align-items: center;
+}
+.scale_img {
+  width: 40%;
+}
+
+
+/* CONTAINER----- */
+
+.main {
   width: 100%;
-} */
+  height: 100vh;
+  overflow: hidden;
+}
 #sidebar {
-  height: 90vh;
-  width: 15%;
+  height: calc(100vh - 80px);
+  width: 300px;
   background-color: black;
 }
 
 #up_bar {
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: calc(100% - 300px);
+  height: 80px;
+  background-color: rgba(0,0,0,0.5);
+}
+
+#main-window {
   position: absolute;
   top: 0;
   right: 0;
-  width: 85%;
-  height: 10vh;
-  background-color: #02030a;
-}
-
-#main {
-  position: absolute;
-  top: 10vh;
-  right: 0;
-  width: 85vw;
-  height: 80vh;
+  width: calc(100% - 300px);
+  height: calc(100% - 80px);
   background-color: #0d121c;
 }
 
 #player {
-  height: 10vh;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  height: 80px;
   width: 100%;
   background-color: #232323;
+}
+/* ----------------------------------------- */
+
+/* SIDEBAR------ */
+#sidebar .logo {
+  height: 80px;
+}
+
+.border_left_green {
+  border-left: 2px solid #c0fe35;
+  padding-left: 10px;
+}
+
+
+#sidebar nav ul li,
+#sidebar .logo,
+#sidebar #playlist
+                     {
+  padding-left: 18px;
+  padding-bottom: 5px;
+}
+
+#sidebar #playlist {
+  margin-top: 20px;
+}
+
+#playlist ul li {
+  list-style: none;
+  padding: 5px 0px;
+}
+
+.line {
+  border-top: 1px solid white;
+  width: 200px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
+#sidebar .bottom_sidebar {
+  padding: 5px 18px;
+}
+
+#sidebar .top-bottom-sidebar {
+  height: calc(100vh - 160px);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+
+
+
+
+/* #sidebar nav ul li {
+  padding: 5px 0;
+} */
+
+/* UP BAR-------- */
+.button {
+  border: 1px solid white;
+  color: white;
+  padding: 15px 32px;
+  border-radius: 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 12px;
+  margin-right: 10px;
+}
+
+#up_bar {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
 }
