--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ main {
 }
 #sidebar {
   height: calc(100% - 80px);
-  width: 300px;
+  width: 250px;
   min-height: 300px;
   background-color: black;
 }
@@ -43,7 +43,7 @@ main {
   position: fixed;
   top: 0;
   right: 0;
-  width: calc(100% - 300px);
+  width: calc(100% - 250px);
   height: 80px;
   background-color: rgba(0,0,0,0.5);
 }
@@ -52,7 +52,7 @@ main {
   position: absolute;
   top: 0;
   right: 0;
-  width: calc(100% - 300px);
+  width: calc(100% - 250px);
   height: calc(100vh - 80px);
   background-color: #0d121c;
   overflow-y: scroll;
@@ -81,8 +81,7 @@ main {
 
 #sidebar nav ul li,
 #sidebar .logo,
-#sidebar #playlist
-                     {
+#sidebar #playlist {
   padding-left: 18px;
   padding-bottom: 5px;
 }
@@ -161,11 +160,13 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
 }
 
-.album .creato_per {
-  margin-top: 25px;
-  margin-bottom: 25px;
+.album .creato_per  {
+
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 
@@ -176,8 +177,16 @@ main {
 
 .recently_played h3,
 .creato_per h3,
-.artisti_pop h3 {
+.artisti_pop h3,
+.creato_per h6       {
   margin-left: 10px;
+  color: white;
+}
+
+.subtitle {
+  margin-top: 5px;
+  margin-bottom: 5px;
+  margin-left: 10px
 }
 
 .dischi {
@@ -201,7 +210,45 @@ justify-content: flex-start;
   padding-top: 5px;
 }
 
+.subtitle {
+  font-size: 11px;
+  color: grey;
+}
 /* copertine nel cerchio */
 .circle {
   border-radius: 50%;
+}
+
+
+/* -----------PLAYER-------- */
+#player {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+}
+#player .player_sx div img {
+  width: 50px;
+}
+
+#player .player_sx .cover_sx {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+/* debug */
+.player_sx {
+  border: 1px solid white;
+  /* width: 200px;
+  height: 50px; */
+}
+.player_center {
+  border: 1px solid white;
+  width: 200px;
+  height: 50px;
+}
+.player_dx {
+  border: 1px solid white;
+  width: 200px;
+  height: 50px;
 }
