--- a/css/style.css
+++ b/css/style.css
@@ -67,7 +67,7 @@ main {
   width: calc(100% - 250px);
   height: calc(100vh - 80px);
   background-color: #0d121c;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 #player {
@@ -151,7 +151,7 @@ main {
   text-decoration: none;
   display: inline-block;
   font-size: 12px;
-  margin-right: 10px;
+  margin-right: 15px;
 }
 
 #up_bar {
@@ -243,9 +243,33 @@ justify-content: flex-start;
   border-radius: 50%;
 }
 
-/* sezione HOVER */
+/* sezione HOVER --------------------*/
+.cover {
+  position: relative;
+}
+.overlay {
+  display: none;
+  background-color: rgba(0, 0, 0, 0.5);
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  font-size: 60px;
+}
+.overlay .fa-play-circle-o {
+  color: white;
+  display: inline-block;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
 
-
+.disco:hover .cover .overlay {
+  display: block;
+}
+/* ------------------fine hover --------- */
 
 
 
