--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: sans-serif;
-  color: grey;
+font-family: 'Montserrat', sans-serif;  color: grey;
 }
 
 a {
@@ -17,7 +16,7 @@ a {
   align-items: center;
 }
 .scale_img {
-  width: 100px;
+  width: 150px;
 }
 
 .scale_ {
